syntax = "proto3";

package ocf.cloud;

option go_package = "github.com/go-ocf/kit/cqrs/protobuf;protobuf";

message AuditContext {
    string user_id = 1;
    string device_id = 2;
    string correlation_id = 3;
}

message EventMetadata {
   string connection_id = 1;
   uint64 sequence = 2;
   uint64 version = 3;
   uint64 timestamp_ms = 4;
}